--- a/about.html
+++ b/about.html
@@ -34,7 +34,9 @@
    We at Bernie Sanders Meme Factory are working hard 
    to transform our memes. We want to explore ideas
    and discover what makes memes great; what made our
-   memes great in the past, and create a path forword.
+   memes great in the past, and the best path forword
+   for our memes.
+
    We want in memes for all.
 
    We want new memes that can empower people, and our
