--- a/products.html
+++ b/products.html
@@ -71,12 +71,12 @@
            2021
         </li>
         <li>All Rights Reserved</li>
-        <li><a href="http://validator.w3.org/check?uri=">HTML VALID</a></li>
-        <li><a href="http://jigsaw.w3.org/css-validator/validator?uri=">CSS VALID</a></li>
+        <li><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fzwcoleman.github.io%2Fit121final%2Fproducts.html">HTML VALID</a></li>
+        <li><a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fzwcoleman.github.io%2Fit121final%2Fproducts.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">CSS VALID</a></li>
         
     </ul>
 
 </footer>
-<script src="script.js"></script>
 </body>
+<script src="script.js"></script>
 </html>
