--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div>
         <nav> 
             <ul>
-                <li id = "fade"><a href="index.html" class = "active">Home</a></li>
-                <li id = "fade"><a id = "hiLight" href="products.html">Products</a></li>
-                <li id = "fade"><a href="about.html">About</a></li>
-                <li id = "fade"><a href="contact.html">Contact Us</a></li>
+                <li><a href="index.html" class = "active">Home</a></li>
+                <li><a id = "hiLight" href="products.html">Products</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
     </div>
@@ -45,7 +45,7 @@
            2021
         </li>
         <li>All Rights Reserved</li>
-        <li><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fzwcoleman.github.io%2Fit121final%2Findex.html">HTML VALID</a></li>
+        <li><a href="http://validator.w3.org/check/referer" rel="nofollow" title="Validate as HTML5">HTML5 VALID</a></li>
         <li><a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fzwcoleman.github.io%2Fit121final%2Findex.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">CSS VALID</a></li>
         
     </ul>
