--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
            2021
         </li>
         <li>All Rights Reserved</li>
-        <li><a href="https://validator.w3.org/check?uri=http%3A%2F%2Fhttps://zwcoleman.github.io/it121final/index.html">HTML5 VALID</a></li>
+        <li><a href="https://validator.w3.org/check?uri=http%3A%2F%2Fhttps:zwcoleman.github.io/it121final/index.html">HTML5 VALID</a></li>
         <li><a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fzwcoleman.github.io%2Fit121final%2Findex.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">CSS VALID</a></li>
         
     </ul>
