--- a/products.html
+++ b/products.html
@@ -72,7 +72,7 @@
            2021
         </li>
         <li>All Rights Reserved</li>
-        <li><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fzwcoleman.github.io%2Fit121final%2Fproducts.html">HTML VALID</a></li>
+        <li><a href="https://validator.w3.org/check?uri=http%3A%2F%2Fzwcoleman.github.io/it121final/products.html">HTML VALID</a></li>
         <li><a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fzwcoleman.github.io%2Fit121final%2Fproducts.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">CSS VALID</a></li>
         
     </ul>
