--- a/contact.html
+++ b/contact.html
@@ -42,22 +42,25 @@
             <p>
             <label for="cname">Name (required, at least 2 characters)</label>
               </p>
-            
+            <p>
             <input id="cname" name="name" minlength="2" type="text" required>
             </p>
             <p>
-              <label for="cemail">E-Mail (required)</label> </p>
-              </p>
+              <label for="cemail">E-Mail (required)</label> 
+            </p>
+              
               <p>
             <input id="cemail" type="email" name="email" required>
             </p>
             <p>
-              <label for="curl">URL (optional)</label> </p>
+              <label for="curl">URL (optional)</label> 
+            </p>
               <p>
             <input id="curl" type="url" name="url">
             </p>
             <p>
-              <label for="ccomment">Your comment (required)</label> </p>
+              <label for="ccomment">Your comment (required)</label> 
+            </p>
               <p>
             <textarea id="ccomment" name="comment" required></textarea>
             </p>
