--- a/contact.html
+++ b/contact.html
@@ -72,9 +72,13 @@
                     <textarea id="ccomment" name="comment" required></textarea>
                 </p>
 
-                <p>
-                    <input id = "submit" class="submit" type="submit" value="Submit">
-                </p>
+                <div class= "subp">
+                    <div class= "button-3">
+                        <input id = "submit" class="submit btn button" type="submit" value="Submit">
+                            <div class="circle button-3"></div>
+                           </div>
+                    
+                        </div>
 
             </fieldset>
         </form>
