--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 <header>
     <div class= "inner-header">
             <img id = "logo" src="images/bernie.png" alt="logo">
-                <h1 >Contact The Bernie Sanders Meme Factory</h1>
+                <h1 class= "center">Contact The Bernie Sanders Meme Factory</h1>
              
         <div>
             <nav> 
