--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header>
     <div class= "inner-header">
         <img id = "logo" src="images/bernie.png" alt="logo">
-            <h1>The Bernie Sanders Meme Factory</h1>
+            <h1 class="center">The Bernie Sanders Meme Factory</h1>
          
     <div>
         <nav> 
