--- a/about.html
+++ b/about.html
@@ -5,13 +5,13 @@
 <title>The Bernie Sanders Meme Factory Product Page</title>
 <link href="css/styles.css" type= "text/css" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="script.js"></script>
+
 </head>
 <body>
     <header>
         <div class= "inner-header">
             <img id = "logo" src="images/bernie.png" alt="logo">
-                <h1 >About The Bernie Sanders Meme Factory</h1>
+                <h1 class="center">About The Bernie Sanders Meme Factory</h1>
              
         <div>
             <nav> 
@@ -67,7 +67,7 @@
         <li><a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fzwcoleman.github.io%2Fit121final%2Fabout.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">CSS VALID</a></li>
         
     </ul>
-
+<script src="script.js"></script>
 </footer>
 </body>
 
