--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
              
         <div>
             <nav> 
-                <ul>
+                <ul id="menu">
                     <li><a href="index.html" >Home</a></li>
                     <li><a id = "hiLight" href="products.html">Products</a></li>
                     <li><a href="about.html" class = "active">About</a></li>
