--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
              
         <div>
             <nav> 
-                <ul>
+                <ul id="menu">
                     <li><a href="index.html" >Home</a></li>
                     <li><a id = "hiLight" href="products.html">Products</a></li>
                     <li><a href="about.html" >About</a></li>
