--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
          
     <div>
         <nav> 
-            <ul>
+            <ul id="menu">
                 <li><a href="index.html" class = "active">Home</a></li>
                 <li><a id = "hiLight" href="products.html">Products</a></li>
                 <li><a href="about.html">About</a></li>
