--- a/products.html
+++ b/products.html
@@ -17,7 +17,7 @@
              
         <div>
             <nav> 
-                <ul>
+                <ul id="menu">
                     <li><a href="index.html" >Home</a></li>
                     <li><a id = "hiLight" class = "active" href="products.html">Products</a></li>
                     <li><a href="about.html">About</a></li>
