--- a/products.html
+++ b/products.html
@@ -65,7 +65,7 @@
     </div>
     <div class="center button-3 "></div>
     <button class="btn button next-btn" id=next>Next</button>
-</div>
+</div<!--end box2 -->>
 <!--     
     <div class="">
 
@@ -80,7 +80,7 @@
             </div>
      </div> -->
 
-        </div><!--end box2 -->
+      
 
    
      </div><!--end box1 -->
